:new: add first version

--- a/src/graph.pug
+++ b/src/graph.pug
@@ -1,14 +1,14 @@
 svg(
 	role='img',
-	viewBox='0 20 580 440',
-	xmlns='http://www.w3.org/2000/svg',
+	viewbox='0 20 580 440',
+	xmlns='http://www.w3.org/2000/svg'
 )
 	title #{args.skillZone}
 	desc #{args.skillZoneDescription}
 	g
 		path(
 			class=styles.graphPeace,
-			data-name="4/8 Frontend",
+			data-name='4/8 Frontend',
 			d='M444.043,240H29.913c0-115,92.706-207.064,207.065-207.064C351.337,32.936,444.043,125,444.043,240z'
 		)
 		g
@@ -26,7 +26,7 @@ svg(
 	g
 		path(
 			class=styles.graphPeace,
-			data-name="1/8 Devops",
+			data-name='1/8 Devops',
 			d='M236.958,240.123l206.97,0.167c0.064,52.972-20.18,105.876-60.553,146.249L236.958,240.123z'
 		)
 		g
@@ -42,7 +42,7 @@ svg(
 	g
 		path(
 			class=styles.graphPeace,
-			data-name="3/8 Backend",
+			data-name='3/8 Backend',
 			d='M235.567,240.141l-205.605-0.168c-0.188,53.255,20.132,106.528,60.808,147.203 c80.864,80.864,210.517,81.318,291.834,0.001L235.567,240.141z'
 		)
 		g
@@ -57,44 +57,36 @@ svg(
 				c48.968,0.04,97.935,0.08,146.903,0.12c19.567,0.016,39.135,0.032,58.703,0.048C237.502,241.643,237.502,238.642,235.567,238.641z'
 			)
 	g
-		g
-			polyline(
-				fill='none',
-				stroke='#000000',
-				stroke-width='2', 
-				stroke-linecap='round', 
-				stroke-linejoin='round',
-				points='240.025,135.01 475.125,30 553,30',
-			)
-			g
-				circle(fill='#000000',cx='240.41',cy='134.933',r='3.76')
-			g
-				circle(fill='#000000',cx='553.24',cy='30',r='3.76')
+		polyline(
+			fill='none',
+			stroke='#000000',
+			stroke-width='2',
+			stroke-linecap='round',
+			stroke-linejoin='round',
+			points='240.025,135.01 475.125,30 553,30'
+		)
+		circle(fill='#000000', cx='240.41', cy='134.933', r='3.76')
+		circle(fill='#000000', cx='553.24', cy='30', r='3.76')
 	g
-		g
-			polyline(
-				fill='none',
-				stroke='#000000', 
-				stroke-width='2', 
-				stroke-linecap='round',
-				stroke-linejoin='round',
-				points='360.44,287.153 508.747,240.543 552.415,240.543',
-			)
-			g
-				circle(fill='#000000',cx='360.784',cy='286.868',r='3.759')
-			g
-				circle(fill='#000000',cx='552.655',cy='240.123',r='3.76')
+		polyline(
+			fill='none',
+			stroke='#000000',
+			stroke-width='2',
+			stroke-linecap='round',
+			stroke-linejoin='round',
+			points='360.44,287.153 508.747,240.543 552.415,240.543'
+		)
+		circle(fill='#000000', cx='360.784', cy='286.868', r='3.759')
+		circle(fill='#000000', cx='552.655', cy='240.123', r='3.76')
 	g
-		g
-			polyline(
-				fill='none',
-				stroke='#000000',
-				stroke-width='2',
-				stroke-linecap='round',
-				stroke-linejoin='round',
-				points='190.497,342.818 489,448.58 553,448.58',
-			)
-			g
-				circle(fill='#000000',cx='190.888',cy='342.758',r='3.76')
-			g
-				circle(fill='#000000',cx='553.24',cy='448.58',r='3.76')
+		polyline(
+			fill='none',
+			stroke='#000000',
+			stroke-width='2',
+			stroke-linecap='round',
+			stroke-linejoin='round',
+			points='190.497,342.818 489,448.58 553,448.58'
+		)
+		circle(fill='#000000', cx='190.888', cy='342.758', r='3.76')
+		circle(fill='#000000', cx='553.24', cy='448.58', r='3.76')
+
