:new: add domain and fix performance errors
Changes to be committed:
	modified:   README.md
	modified:   iac/main.tf
	modified:   iac/terragrunt.hcl
	modified:   package-lock.json
	modified:   package.json
	modified:   src/graph.pug
	modified:   src/i18n/index.ts
	modified:   src/i18n/pt.ts
	modified:   src/images/icons/github.pug
	modified:   src/images/icons/gmail.pug
	modified:   src/images/icons/linkedin.pug
	modified:   src/images/icons/maps.pug
	modified:   src/images/icons/whatsapp.pug
	modified:   src/index.pug
	modified:   src/index.ts
	renamed:    src/static/images/articles/linkedin-2020-7.png -> src/static/images/articles/linkedin-2020-7-outras-realidades-nos-navegadores.png
	renamed:    src/static/images/articles/medium-2018-5.jpg -> src/static/images/articles/medium-2018-5-arrow-functions-vs-functions.jpg
	renamed:    src/static/images/articles/medium-2018-5.png -> src/static/images/articles/medium-2018-5-o-que-e-proxy-no-javascript.png
	modified:   src/style.ts
	new file:   src/styles.ts
	modified:   src/typings.d.ts
	modified:   src/util/index.ts
	modified:   tsconfig.json
	modified:   webpack.config.ts
	modified:   package-lock.json
	modified:   package.json

--- a/src/graph.pug
+++ b/src/graph.pug
@@ -1,6 +1,7 @@
 svg(
 	role='img',
 	viewbox='0 20 580 440',
+	style=`width: ${styles.contentSkillsGraphSize}`,
 	xmlns='http://www.w3.org/2000/svg'
 )
 	title #{args.skillZone}
