--- a/src/images/icons/whatsapp.pug
+++ b/src/images/icons/whatsapp.pug
@@ -1,6 +1,7 @@
 svg(
 	role='img',
 	viewbox='0 0 24 24',
+	style=`width: ${styles.headerContactsSize}`,
 	xmlns='http://www.w3.org/2000/svg'
 )
 	title WhatsApp icon
