--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,18 @@
+- const style = require(`./styles`).rules
 doctype html
 html(lang='pt-BR')
 	head
 		title #{args.title}
 		link(rel='manifest', href='/manifest.json')
 		| !{htmlWebpackPlugin.tags.headTags}
-	body(class=`${styles.body} h-resume`)
+	body(class=`${styles.body} h-resume ${style.grid}`)
 		header(class=styles.headerWrapper)
 			figure(class=styles.headerPhoto)
-				img(src=args.photo, alt=args.photoAlt)
+				picture
+					source(type='image/webp', srcset=`${args.photo.file}.webp`)
+					source(type=args.photo.type, srcset=`${args.photo.file}.${args.photo.ext}`)
+
+					img(src=`${args.photo.file}.${args.photo.ext}`, width='169', style=`width: ${styles.headerPhotoSizeDesktop};height:${styles.headerPhotoSizeDesktop}`, alt=args.photoAlt)
 			hgroup(class=styles.headerNameAndJob)
 				h1(class='p-name') #{args.name}
 				h2(class='p-skill') #{args.job}
@@ -18,7 +23,7 @@ html(lang='pt-BR')
 						li(title=t)
 							a(href=args.contacts[t].href, target='_blank', rel='noopener')
 								figure
-									| !{require(`./images/icons/${t}.pug`)()}
+									| !{require(`./images/icons/${t}.pug`)({ styles: styles })}
 									figcaption #{args.contacts[t].text}
 			p(class=`${styles.headerAbout} p-summary`) #{args.aboutMe}
 
@@ -98,20 +103,24 @@ html(lang='pt-BR')
 											b #{role}
 
 											span De
-												- const month = start.getMonth();
-												- const year = start.getFullYear();
-												time(datetime=`${year}-${month + 1}`)
-													| #{args.monthsOfYear[month + 1]} #{year}
+												= ' '
+												- const [year, month] = start;
+												time(datetime=`${year}-${month}`)
+													| #{args.monthsOfYear[month - 1]} #{year}
 											span
 												if end
 													| Até
-													- const month = end.getMonth();
-													- const year = end.getFullYear();
-													time(datetime=`${year}-${month + 1}`)
-														| #{args.monthsOfYear[month + 1]} #{year}
+													= ' '
+													- const [year, month] = end;
+													time(datetime=`${year}-${month}`)
+														| #{args.monthsOfYear[month - 1]} #{year}
 												else
 													| #{end}
-							img(src=job.logo, alt=job.company)
+							picture
+								- const [image, ext, type] = job.logo
+								source(type='image/webp', srcset=`${image}.webp`)
+								source(type=type, srcset=`${image}.${ext}`)
+								img(src=`${image}.${ext}`, width='74', style=`width:${styles.experienceImageSize};max-height:${styles.experienceImageSize}`, alt=job.company)
 
 				button(
 					type='button',
@@ -140,12 +149,14 @@ html(lang='pt-BR')
 							- const { start, end } = academic;
 							- const { year, month } = start;
 							span De
+								= ' '
 								time(datetime=`${year}-${month}`)
 									| #{args.monthsOfYear[month - 1]} #{year}
 
 							span
 								if typeof end !== 'string'
 									| Até
+									= ' '
 									- const { year, month } = end;
 									time(datetime=`${year}-${month}`)
 										| #{args.monthsOfYear[month - 1]} #{year}
@@ -175,7 +186,11 @@ html(lang='pt-BR')
 							a(href='#')
 								article
 									figure
-										img(src=articleOrPost.image)
+										picture
+											- const [image, ext, type] = articleOrPost.image
+											source(type='image/webp', srcset=`${image}.webp`)
+											source(type=type, srcset=`${image}.${ext}`)
+											img(src=`${image}.${ext}`, width='229', style=`width:${styles.articleImageSize}`, alt=articleOrPost.title)
 										figcaption #{articleOrPost.title}
 									- const { month, year } = articleOrPost.date;
 									i #{articleOrPost.platform}
