--- a/src/index.pug
+++ b/src/index.pug
@@ -119,7 +119,7 @@ html(lang='pt-BR')
 								- const [image, ext, type] = job.logo
 								source(type='image/webp', srcset=`${image}.webp`)
 								source(type=type, srcset=`${image}.${ext}`)
-								img(src=`${image}.${ext}`, width='74', style=`width:${styles.experienceImageSize};max-height:${styles.experienceImageSize}`, alt=job.company)
+								img(src=`${image}.${ext}`, width='74', heigth='74', style=`width:${styles.experienceImageSize};max-height:${styles.experienceImageSize}`, alt=job.company)
 
 				button(
 					type='button',
