:new: add css inline On branch main Changes to be committed: 	modified:   .editorconfig 	modified:   .gitignore 	modified:   README.md 	new file:   extract-css.ts 	modified:   iac/.terraform.lock.hcl 	modified:   iac/main.tf 	modified:   iac/terragrunt.hcl 	modified:   package-lock.json 	modified:   package.json 	modified:   src/i18n/pt.ts 	modified:   src/index.pug 	deleted:    src/json-ld.pug 	new file:   src/json-ld.ts 	modified:   src/static/sitemap.xml 	modified:   tsconfig.json 	modified:   webpack.config.ts

--- a/src/index.pug
+++ b/src/index.pug
@@ -200,6 +200,6 @@ html(lang='pt-BR')
 									i #{articleOrPost.platform}
 									time(datetime=`${year}-${month}`)
 										| #{args.monthsOfYear[month - 1]} #{year}
-
-			include ./json-ld.pug
+		script(type='application/ld+json').
+			!{require('./json-ld')(args)}
 		| !{htmlWebpackPlugin.tags.bodyTags}
