--- a/src/index.pug
+++ b/src/index.pug
@@ -45,9 +45,10 @@ html(lang='pt-BR')
 						li(class=styles.projectItem)
 							details
 								summary
+									- const { month, year } = project.date;
 									b #{project.summary.name}
-									| #{project.summary.description}
-								p #{project.details}
+									time(datetime=`${year}-${month}`) #{args.monthsOfYear[month - 1]} #{year}
+								p #{project.summary.description}
 							dl(class=styles.projectCategories)
 								- const tagTypes = Object.keys(project.tags)
 								each tagType in tagTypes
@@ -55,9 +56,7 @@ html(lang='pt-BR')
 										dt #{tagType}
 										dd(class=(tagType === 'tecnologia' ? 'p-skill':''))
 											| #{tagValue}
-							- const { month, year } = project.date;
-							time(datetime=`${year}-${month}`)
-								| #{args.monthsOfYear[month - 1]} #{year}
+
 
 				button(
 					type='button',
