--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='pt-BR')
+html(lang=args.language)
 	head
 		title #{args.title}
 		link(rel='manifest', href='/manifest.json')
@@ -16,7 +16,7 @@ html(lang='pt-BR')
 					source(type='image/webp', srcset=`${args.photo.file}.webp`)
 					source(type=args.photo.type, srcset=`${args.photo.file}.${args.photo.ext}`)
 
-					img(src=`${args.photo.file}.${args.photo.ext}`, width='169', height='169', alt=args.photoAlt)
+					img(src=`${args.photo.file}.${args.photo.ext}`, loading='lazy', width='169', height='169', alt=args.photoAlt)
 			hgroup(class=styles.headerNameAndJob)
 				h1(class='p-name') #{args.name}
 				h2(class='p-skill') #{args.job}
@@ -123,7 +123,7 @@ html(lang='pt-BR')
 								- const [image, ext, type] = job.logo
 								source(type='image/webp', srcset=`${image}.webp`)
 								source(type=type, srcset=`${image}.${ext}`)
-								img(src=`${image}.${ext}`, width='74', heigth='74', style=`width:${styles.experienceImageSize};max-height:${styles.experienceImageSize}`, alt=job.company)
+								img(src=`${image}.${ext}`, loading='lazy', width='74', heigth='74', style=`width:${styles.experienceImageSize};max-height:${styles.experienceImageSize}`, alt=job.company)
 
 				button(
 					type='button',
@@ -193,7 +193,7 @@ html(lang='pt-BR')
 											- const [image, ext, type] = articleOrPost.image
 											source(type='image/webp', srcset=`${image}.webp`)
 											source(type=type, srcset=`${image}.${ext}`)
-											img(src=`${image}.${ext}`, width='229', height='229', style=`width:${styles.articleImageSize}`, alt=articleOrPost.title)
+											img(src=`${image}.${ext}`, loading='lazy', width='229', height='229', style=`width:${styles.articleImageSize}`, alt=articleOrPost.title)
 										figcaption #{articleOrPost.title}
 									- const { month, year } = articleOrPost.date;
 									i #{articleOrPost.platform}
