--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang=args.language)
 	head
 		title #{args.title}
-		link(rel='manifest', href='/manifest.json')
+		link(rel='manifest', href=`/manifest.${args.language.split('-').shift()}.json`)
 		link(rel='icon', type='image/x-icon', href='/favicon/favicon.ico')
 		link(rel='shortcut icon', type='image/x-icon', href='/favicon/favicon.ico')
 		link(rel='apple-touch-icon', sizes='180x180', href='/favicon/apple-touch-icon.png')
